# translator-toolkit

./: .gitignore  README.md  requirements.txt  setup.cfg
tests/: test_mxlff.py  test_sdlxliff.py
tests/data/: 01_ja-ja-en-R.mxliff  merged.docx.sdlxliff  test01_en.docx
tests/util/: test_stringutil.py
translator_toolkit/: __init__.py  error.py  mxliff.py  ns.py  sdlxliff.py  xjson.py
translator_toolkit/util/: fileutil.py  stringutil.py  xmlutil.py
