[flake8]
ignore = W503
max-line-length = 250

[metadata]
name = translator_toolkit
version = attr: translator_toolkit.__version__
url = https://github.com/capybara-translation/translator-toolkit.git
author = capybara-translation
license = MIT
description = A set of useful tools for translators
long_description = file: README.md

[options]
packages = find:
zip_safe = False
include_package_data = True

[options.extras_require]
develop =
    pytest
    flake8
    autopep8
    pep8-naming
    pytest-only
    flake8-quotes
